# Simple-Blockchain-Prototype

./: CMakeLists.txt  README.md
src/: block.cpp  block.h  blockchain.cpp  blockchain.h  sha256.cpp  sha256.h
